Bug 301298 - [KDE 4.9b1] Cursor navigation in xml file very slow when reaching certain characters
Summary: [KDE 4.9b1] Cursor navigation in xml file very slow when reaching certain cha...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-06 18:49 UTC by zless
Modified: 2012-07-03 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zless 2012-06-06 18:49:44 UTC
This looks like a regression in katepart that is included with KDE 4.9 beta1.

I edit lots of xml files in different editors that as far as I know are all based on the katepart component (Kate, Kwrite, Krusader).

The contents look like (all in one line - lots of line like this):

<prescriptionDrugs AppID="W54317002/P50851" pos="1" copaymentListType="B" copaymentPercent="90" diseaseCode="458" drugCode="W54317002" quantity="90" retailPrice="2.793666" refPrice="2.514299" retailValue="251.43" copaymentValue="226.29" copaymentValue50="125.71" copaymentValue40="100.58" byProtocol="0" diagnosticType="2" vatPercent="9" protocolValue="0" quantityPerPackage="30" pricePerPackage="83.81000" personValue="23.38307" drugInvoiceNo="CT AMB-1118" drugInvoiceDate="2012-06-01"/>

I jump with the cursor using Ctrl+Arrow Left or Right.

if the file contains more than 1000 lines the jumping is very slow but only when reaching the " (quotation mark) character. That is - when jumping to a =, /, - character the speed is OK but when it reaches the " the cursor stops for what feels like 1 second before jumping to the next stop.

The speed feels almost ok with files of around 500 lines and is instant with files of 200 lines.

Reproducible: Always

Steps to Reproduce:
1. Edit large xml file with Kate (more than 1000 lines)
2. Use Ctrl+Arrow to jump with cursor left or right inside a line
3. The jumping is slow around the " (quotation mark) character.
Comment 1 zless 2012-06-13 19:11:19 UTC
Still happening with KDE 4.9 beta 2.
Comment 2 Dominik Haumann 2012-07-02 21:39:50 UTC
Fixed for KDE 4.9, and even faster in KDE 4.10.
Comment 3 Dominik Haumann 2012-07-03 12:36:57 UTC
fix " matching, it simply will never work
M  +2    -3    part/document/katedocument.cpp
http://commits.kde.org/kate/83a6f7c40c8fafe219f1972064b38951b66dd1ea