fix " matching, it simply will never work

FIXED-IN: 4.9
BUG: 301298